# gpder

./: Bayesian Optimization Demo.ipynb  GPR Demo.ipynb  LICENSE  README.md  SKlearn GPR.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publishing.yml  python-package.yml  testing.yml
demos/: Bayes -- Learning the MET Efficiency Space.ipynb  Bayes -- Optimizing MET Efficiency.ipynb
demos/.ipynb_checkpoints/: Bayes -- Learning the MET Efficiency Space-checkpoint.ipynb  Bayes -- Optimizing MET Efficiency-checkpoint.ipynb  GaussianProcess-checkpoint.ipynb
demos/Basics/: GaussianProcess.ipynb
demos/HEP_2D/: BED.ipynb  derivative_GP_regression.ipynb  hep_functions.py  regular_GP_regression.ipynb  utils.py
demos/HEP_4D/: BED.ipynb  derivative_GP_regression.ipynb  hep_functions.py  regular_GP_regression.ipynb  utils.py
demos/Photon_Jet/: MET_Efficiency.ipynb  photon_jet.root
demos/Three_Jets/: Bayes details.ipynb  Learning_MET_Efficiency.ipynb
demos/datasets/: three_jets_30k.h5
demos/jets_2D/: Bayesian Experimental Design.ipynb  Gaussian Process Regression.ipynb  dataset_25res.h5  obj_functions.py  plotting_utils.py
demos/jets_4D/: Gaussian Process Regression.ipynb  obj_functions_fig.py  plotting_utils.py
demos/simple1D/: Gaussian Process.ipynb  Uncertainty Minimization -- Hybrid Search.ipynb  fixed.ipynb  (+2 more)
gpder/: Untitled.ipynb  __init__.py  bayesian_opt.py  bayesian_opt_uncertainty.py  bayesian_opt_utils.py  gaussian_process.py  kernel.py  minimizers.py  plotting_utils.py  rgb_kernels.py
tests/: __init__.py  test_bayes.py  test_gp.py
(+58 files in other folders)
