[metadata]
name = 'gpder'
version = '1.0.0'
author = "Alexis Romero"
author_email = 'alexir2@uci.edu'
description = "Gaussian processes with derivative observations."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexxromero/gpder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    scikit-learn

[options.packages.find]
where = src
